# linux-dev-2020

./: README.md  hello_world.c
03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile  fun.c  prog.c
05_Environmental/: CMakeLists.txt  Window.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: Makefile.am  buf.c  buf.h  libbuf.c
08_TestingCoverage/tests/: Makefile.am  test.ts
09_I18nL10n/: configure.ac  main.pot
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  main.c  main.md  main.pot  ru.po
11_Toolkits/: Makefile  text_stat.c
12_ScriptingText/: Makefile.am  configure.ac
13_PatchInstall/: Makefile.am  configure.ac  main.c  ru.po
